--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "standard": "17.1.2",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-singlefile": "^2.0.2"
   },
   "eslintConfig": {
     "extends": "node_modules/standard/eslintrc.json"
